--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,6 @@ test {
 dependencies {
     testImplementation ('org.junit.jupiter:junit-jupiter-api:5.3.1', 'org.mockito:mockito-inline:3.4.0')
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
-    testCompile("org.assertj:assertj-core:3.11.1")
+    testCompile('org.assertj:assertj-core:3.11.1', 'org.junit.jupiter:junit-jupiter-params:5.7.0')
 }
 
