--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     testImplementation ('org.junit.jupiter:junit-jupiter-api:5.3.1', 'org.mockito:mockito-inline:3.4.0')
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     testCompile('org.assertj:assertj-core:3.19.0', 'org.junit.jupiter:junit-jupiter-params:5.7.0')
+    compile 'javax.json:javax.json-api:1.0'
 }
 
 mainClassName = 'com.mattgray.socialnetworkkata.SocialNetwork'
